[gd_scene load_steps=21 format=3 uid="uid://cldtkf2ya51vr"]

[ext_resource type="Texture2D" uid="uid://bu12swtrmt5ol" path="res://assets/world/objects/TX Props.png" id="1_exsdh"]
[ext_resource type="Script" uid="uid://qtngikw21geb" path="res://scenes/entities/demonic_stone.gd" id="1_it42s"]
[ext_resource type="Texture2D" uid="uid://dtkx7ugfw3v6o" path="res://assets/world/objects/SpriteSheet.png" id="2_it42s"]
[ext_resource type="Texture2D" uid="uid://b2iu6kbopulf3" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_01.png" id="5_jxu5r"]
[ext_resource type="Texture2D" uid="uid://bytot36btx82o" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_02.png" id="6_u3328"]
[ext_resource type="Texture2D" uid="uid://c1urotrssfygo" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_03.png" id="7_ppx87"]
[ext_resource type="Texture2D" uid="uid://b5vit5ouh002o" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_04.png" id="8_jsdum"]
[ext_resource type="Texture2D" uid="uid://cmb17i02atdaf" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_05.png" id="9_v6p8v"]
[ext_resource type="Texture2D" uid="uid://d36tplun2nnjd" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_06.png" id="10_os4qn"]
[ext_resource type="Texture2D" uid="uid://b0eqsngur8x23" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_07.png" id="11_anmje"]
[ext_resource type="Texture2D" uid="uid://oh5nix4ugye1" path="res://assets/world/objects/Stone Defeated Crackle Animation/FX002_08.png" id="12_vwrcn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b47aq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b47aq"]
atlas = ExtResource("2_it42s")
region = Rect2(0, 0, 25, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sgs8"]
atlas = ExtResource("2_it42s")
region = Rect2(25, 0, 25, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q624m"]
atlas = ExtResource("2_it42s")
region = Rect2(50, 0, 25, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nndn7"]
atlas = ExtResource("2_it42s")
region = Rect2(75, 0, 25, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgjxc"]
atlas = ExtResource("2_it42s")
region = Rect2(100, 0, 25, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_da7w6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b47aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sgs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q624m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nndn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgjxc")
}],
"loop": true,
"name": &"aura",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g1fdf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i1aw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_jxu5r")
}, {
"duration": 1.0,
"texture": ExtResource("6_u3328")
}, {
"duration": 1.0,
"texture": ExtResource("7_ppx87")
}, {
"duration": 1.0,
"texture": ExtResource("8_jsdum")
}, {
"duration": 1.0,
"texture": ExtResource("9_v6p8v")
}, {
"duration": 1.0,
"texture": ExtResource("10_os4qn")
}, {
"duration": 1.0,
"texture": ExtResource("11_anmje")
}, {
"duration": 1.0,
"texture": ExtResource("12_vwrcn")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[node name="Demonic Stone" type="StaticBody2D"]
z_index = 2
y_sort_enabled = true
collision_layer = 0
collision_mask = 0
script = ExtResource("1_it42s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_b47aq")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -29)
texture = ExtResource("1_exsdh")
region_enabled = true
region_rect = Rect2(224, 0, 32, 64)

[node name="GlowingSymbols" type="Sprite2D" parent="Sprite2D"]
visible = false
texture = ExtResource("1_exsdh")
region_enabled = true
region_rect = Rect2(256, 0, 32, 64)

[node name="EnergyParticles" type="AnimatedSprite2D" parent="Sprite2D"]
modulate = Color(0, 1, 0.427451, 1)
position = Vector2(0, 13.12)
scale = Vector2(1.445, 1.445)
sprite_frames = SubResource("SpriteFrames_da7w6")
animation = &"aura"
autoplay = "aura"
frame_progress = 0.562812

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(1.645, 1.22)
shape = SubResource("CircleShape2D_g1fdf")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -84.0
offset_right = 20.0
offset_bottom = -61.0

[node name="GlowTimer" type="Timer" parent="."]

[node name="CrumbleAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -25)
scale = Vector2(2, 1.5)
sprite_frames = SubResource("SpriteFrames_i1aw2")
frame = 7
frame_progress = 1.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="GlowTimer" to="." method="_on_glow_timer_timeout"]
